--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.51.23",
-    "axios": "^1.7.3",
+    "axios": "^1.7.4",
     "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -34,6 +35,7 @@
     "expo-web-browser": "~13.0.3",
     "formik": "^2.4.6",
     "i18n-js": "^4.4.3",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
