--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "formik": "^2.4.6",
     "i18n-js": "^4.4.3",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
