--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.6.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
+    "victory-native": "^37.0.3-next.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
