--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "victory-native": "^37.0.3-next.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-print": "~13.0.1",
+    "expo-sharing": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
