--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "victory-native": "^37.0.3-next.0",
     "yup": "^1.4.0",
     "expo-print": "~13.0.1",
-    "expo-sharing": "~12.0.1"
+    "expo-sharing": "~12.0.1",
+    "expo-file-system": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
