--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll",
+    "test": "jest --detectOpenHandles",
     "lint": "expo lint"
-  },
-  "jest": {
-    "preset": "jest-expo"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
@@ -25,15 +22,19 @@
     "axios": "^1.7.4",
     "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
+    "expo-print": "~13.0.1",
     "expo-router": "~3.5.21",
     "expo-secure-store": "~13.0.2",
+    "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "fast-text-encoding": "^1.0.6",
     "formik": "^2.4.6",
     "i18n-js": "^4.4.3",
     "moment": "^2.30.1",
@@ -46,22 +47,21 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.6.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "victory-native": "^37.0.3-next.0",
-    "yup": "^1.4.0",
-    "expo-print": "~13.0.1",
-    "expo-sharing": "~12.0.1",
-    "expo-file-system": "~17.0.1"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.9.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
+    "dotenv": "^16.4.5",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
-    "react-test-renderer": "18.2.0",
+    "msw": "^2.6.6",
     "typescript": "~5.3.3"
   },
   "private": true
